solved back-to-top and chatbot overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2252,8 +2252,8 @@ footer {
 }
 #back-to-top-container {
   position: fixed;
-  bottom: 115px;
-  right: 35px; /* Changed left to right */
+  bottom: 48px;
+  right: 4px; /* Changed left to right */
   cursor: pointer;
   z-index: 1000;
 }
@@ -2268,9 +2268,9 @@ footer {
 }
 
 #back-to-top {
-  width: 40px;
-  height: 40px;
-  fill: rgb(167, 95, 107);
+  width: 51px;
+  height: 51px;
+  fill: #d26d6d;
   transition: fill 0.3s;
 }
 
@@ -2489,3 +2489,4 @@ footer {
   }
 
 }
+
